# yonder

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accept.rs  client.rs  config.rs  discovery.rs  identity.rs  lib.rs  main.rs  net.rs  server.rs  state.rs  transfer.rs
src-tauri/src/commands/: mod.rs  peers.rs  settings.rs  transfers.rs  window.rs
src/components/: ReceivePrompt.css  ReceivePrompt.tsx
src/components/ApprovalPopup/: ApprovalPopup.css  ApprovalPopup.tsx
src/components/PeerGrid/: PeerCard.tsx  PeerGrid.css  PeerGrid.tsx
src/components/SettingsDialog/: SettingsDialog.css  SettingsDialog.tsx
src/components/TitleBar/: TitleBar.css  TitleBar.tsx
src/components/Toast/: Toast.css  Toast.tsx
src/components/TransfersPanel/: TransfersPanel.css  TransfersPanel.tsx
src/lib/: format.test.ts  format.ts  tauri.test.ts  tauri.ts
src/stores/: peerStore.test.ts  peerStore.ts  settingsStore.test.ts  settingsStore.ts  toastStore.test.ts  toastStore.ts  transferStore.test.ts  transferStore.ts
src/styles/: global.css
src/test/: setup.ts
