[package]
name = "yonder"
version = "0.1.0"
edition = "2021"

[lib]
name = "yonder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
dirs = "6"

mdns-sd = "0.13"
# pin range: only 0.13 because newer versions have breaking API changes around ServiceInfo

axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }

reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "rustls-tls"] }

hostname = "0.4"
local-ip-address = "0.6"
os_info = "3"
sanitize-filename = "0.6"
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"
