[package]
name = "yonder"
version = "0.1.0"
edition = "2021"

[lib]
name = "yonder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
dirs = "6"

# QUIC transport + mDNS-based local-network address lookup. RelayMode is
# pinned to Disabled at the call-site (via presets::N0DisableRelay), so no
# DERP traffic is ever sent or received.
iroh = { version = "0.98", features = ["address-lookup-mdns"] }
n0-future = "0.3"
data-encoding = "2"

hostname = "0.4"
os_info = "3"
sanitize-filename = "0.6"

[dev-dependencies]
tempfile = "3"
